--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -8,7 +8,8 @@ services:
       interval: 2s
       timeout: 2s
       retries: 15
-
+    networks:
+      - jenkins-net
   app:
     image: node-redis-counter:test
     depends_on:
@@ -23,3 +24,8 @@ services:
       SERVICE_VERSION: "${SERVICE_VERSION:-1.0.0}"
     ports:
       - "${HOST_HTTP_PORT:-18080}:${APP_PORT:-3000}"
+    networks:
+      - jenkins-net
+networks:
+  jenkins-net:
+    external: true
